# sync_ics2gcal

./: .gitignore  .readthedocs.yml  .travis.yml  LICENSE  README.md  manage-calendars.py  pyproject.toml  requirements.txt  sample-config.yml  setup.cfg  setup.py  sync-calendar.py
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  pythonpackage.yml  pythonpublish.yml  reviewdog.yml
docs/: make.bat
docs/source/: conf.py  index.rst  modules.rst  readme_link.md  reference.rst  sync_ics2gcal.rst
gcal_sync/: __init__.py  gcal.py  ical.py  sync.py  test-events.py
sync_ics2gcal/: __init__.py  gcal.py  ical.py  manage_calendars.py  sync.py  sync_calendar.py
tests/: bench_converter.py  test_converter.py  test_imports.py  test_sync.py
