[tool.poetry]
name = "sync_ics2gcal"
version = "0.1.4"
description = "Sync ics file with Google calendar"
authors = ["Dmitry Belyaev <b4tm4n@mail.ru>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/b4tman/sync_ics2gcal"
repository = "https://github.com/b4tman/sync_ics2gcal"
keywords = ["icalendar", "sync", "google", "calendar"]
classifiers = [
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
]

[tool.poetry.dependencies]
python = "^3.8"
google-auth = "2.9.1"
google-api-python-client = "2.55.0"
icalendar = "4.1.0"
pytz = "2022.1"
PyYAML = "6.0"
fire = "0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
flake8 = "^5.0.1"
black = "^22.6.0"
mypy = ">=0.960"
types-python-dateutil = "^2.8.18"
types-pytz = ">=2021.3.8"
types-PyYAML = "^6.0.9"
lxml = "^4.9.1"

[tool.poetry.scripts]
sync-ics2gcal = "sync_ics2gcal.sync_calendar:main"
manage-ics2gcal = "sync_ics2gcal.manage_calendars:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = [
    'icalendar',
    'google.*',
    'googleapiclient',
    'fire'
]
ignore_missing_imports = true
